--- a/styles/components/main-nav/sub-header-meta.styl
+++ b/styles/components/main-nav/sub-header-meta.styl
@@ -10,11 +10,14 @@
       text-align right
 
     a
+      &:link, &:active
+      background-color transparent
       color #000
 
-      &:hover
+      &:hover, &:focus
         background-color link-highlight-color
         color #fff
+
 
 
 .content .meta
