--- a/styles/components/sub-header/image-teaser.styl
+++ b/styles/components/sub-header/image-teaser.styl
@@ -21,7 +21,8 @@
 
     h1
       // text-align center
-      font-family modern_sansregular, 'Helvetica Neue', Helvetica, Arial, sans-serif
+      font-family opensans_bold, 'Helvetica Neue', Helvetica, Arial, sans-serif
+      font-weight bold
       font-size 4rem
       letter-spacing .3rem
 
@@ -29,7 +30,7 @@
       margin-top .5rem
       font-family JaapokkiRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif
       font-size 1.5rem
-      padded-text(text-highlight, 1rem)
+      padded-text(text-highlight-black, 1rem)
       line-height 1.7
 
 +up-to(bp-medium)
