--- a/styles/globals/colors.styl
+++ b/styles/globals/colors.styl
@@ -1,7 +1,7 @@
 
 // text-highlight = rgba(95, 191, 107, 0.66)
 // text-highlight = rgba(191, 95, 95, 0.66)
-// text-highlight = rgba(95, 191, 183, 0.66)
+// text-highlight2 = rgba(95, 191, 183, 0.66)
 // text-highlight = rgba(180, 175, 141, 0.36)
 // text-highlight = rgba(228, 0, 226, 0.36)
 // text-highlight = rgba(228, 0, 0, 0.36)
@@ -14,7 +14,9 @@ link-highlight-color = rgb(255, 112, 112)
 link-color-hover = link-highlight-color
 
 
-text-highlight-black = rgba(6, 6, 6, 0.36)
+// text-highlight-black = rgba(6, 6, 6, 0.36)
 text-highlight = alpha(link-highlight-color, 0.75)
+
+text-highlight-black = alpha(text-highlight, .65)
 
 text-highlight-dark = alpha(text-highlight, .85)
