--- a/styles/components/teasers/teaser.styl
+++ b/styles/components/teasers/teaser.styl
@@ -17,7 +17,6 @@ teaser-border-radius = 2px
     user-select none
 
     .overlay
-      visibility hidden
       background-color text-highlight-dark
       position absolute
       top 0
@@ -25,10 +24,13 @@ teaser-border-radius = 2px
       bottom 0
       left 0
       z-index 1003
-      opacity 0
       transition opacity .5s
 
-    &:hover
+    &:link, &:active
+      .overlay
+        visibility hidden
+        opacity 0
+    &.hover, &:hover, &:focus
       .overlay
         visibility visible
         opacity 1
