--- a/styles/components/stretched-hero/index.styl
+++ b/styles/components/stretched-hero/index.styl
@@ -56,6 +56,9 @@
     left 50%
     transform translate(-50%, -50%)
 
+  .meta a:link, &:active
+      color #fff
+
 +up-to(bp-medium)
   .stretched-hero
     .central-teaser
