--- a/styles/components/sub-header/image-teaser.styl
+++ b/styles/components/sub-header/image-teaser.styl
@@ -26,6 +26,9 @@
       font-size 4rem
       letter-spacing .3rem
 
+      &.sub-layout-main-brand
+        font-family modern_sansregular, 'Helvetica Neue', Helvetica, Arial, sans-serif
+
     p.sub-title
       margin-top .5rem
       font-family JaapokkiRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif
