--- a/templates/base_layout.pug
+++ b/templates/base_layout.pug
@@ -24,7 +24,8 @@ html(lang="en")
     include cross_link_teaser
     block body
 
-    include shared_info
+    footer.main-footer
+      p.copyright Copyright &copy; 2016 Andreas Niehues
 
     script(src="https://code.jquery.com/jquery-3.1.0.min.js")
     script.
