--- a/templates/meta_nav.pug
+++ b/templates/meta_nav.pug
@@ -7,4 +7,4 @@ nav.meta
     li
       a(href="#contact") kontakt
     li
-      a(href="#imprint") impressum
+      a(href=HOME_HOST+"/impressum.html") impressum
