--- a/templates/landing_page_layout.pug
+++ b/templates/landing_page_layout.pug
@@ -16,6 +16,8 @@ block body
       h1 Andreas Niehues
       p.sub-title Systemisch integrative Praxis für <span class="together">Paar- und Familientherapie</span>, <span class="together">Coaching und psychologische Beratung</span>, <span class="together">Sexualberatung und Sexualpädagogik</span>
 
+    span.scroll-indicator
+
 
   section.content
     block content
