--- a/templates/practice.pug
+++ b/templates/practice.pug
@@ -5,6 +5,6 @@
     Die Praxis befindet sich in der sanierten ehemaligen Lukaskirche in Essen-Holsterhausen.
 
     Die Praxis ist barrierefrei zugänglich und es befinden sich Parkplätze direkt vor dem Haus.
-    Die Anbindung an die umliegenden Städte ist ideal, die A40 und die A52 sind 10 Fahrminuten entfernt.
+    Die Anbindung an die umliegenden Städte ist ideal, die A40 ist 5 Fahrminuten und die A52 15 Fahrminuten entfernt.
 
     Auch mit dem öffentlichen Nahverkerhr (U18 und Tram 101) ist die Praxis gut zu erreichen
