--- a/templates/about_me.pug
+++ b/templates/about_me.pug
@@ -9,12 +9,11 @@
       :markdown-it
         ### Mein Hintergrund
 
-        seit 2010 als Paar- und Familientherapeut angestellt bei der Christlichen Sozialhilfe Köln-Mülheim e.V.
-
-        *	Fortbildner im Bereich kindliche Sexualentwicklung, Kindeswohlgefährdung und Jugendsexualität
-        * langjährig hauptamtlich tätig als Sexualpädagoge und Berater in der Aidsberatung des Caritasverbandes der Stadt Münster und der Schwangerenberatung des Caritasverbandes für die Stadt Recklinghausen e.V.
-        * Dozent in der Krankenpflegeschule der Kliniken Essen Mitten
-        * mehrere Jahre Berufserfahrung in der Reisebranche sowohl als Reiseleiter im Ausland als auch im Büro in hiesigen Gefilden
+        * seit 2010 als *Paar- und Familientherapeut* angestellt bei der Christlichen Sozialhilfe Köln-Mülheim e.V.
+        * *Fortbildner* im Bereich kindliche Sexualentwicklung ,  Kindeswohlgefährdung und Jugendsexualität
+        * langjährig hauptamtlich tätig als *Sexualpädagoge* und *Berater* in der Aidsberatung des Caritasverbandes der Stadt Essen und der Schwangerenberatung des Caritasverbandes für die Stadt Recklinghausen e.V.
+        * *Dozent* an der *Krankenpflegeschule* der Kliniken Essen Mitten
+        * mehrere Jahre Berufserfahrung auch in der freien Wirtschaft u.a. in der Reisebranche
 
     .references
       .reference-list
@@ -27,6 +26,7 @@
           * Sexualpädagoge (isp-Dortmund)
           * Dipl. Sozialarbeiter (KFH NW in Münster)
           * Studium der nordischen Sprachen (Wilhelmuniversität Münster)
+          * Laufende Fort- und Weiterbildungen u.a. in den Methoden der systemischen Sexualtherapie
 
       .reference-list
         :markdown-it
@@ -37,9 +37,9 @@
           * Caritasverband für die Stadt Essen e.V.
           * Diözesancaritasverband Essen
           * Landeskriminalpolitzei NRW
-          * Bundeszentrale für gesundheitliche Aufklärung
+          * Bundeszentrale für gesundheitliche Aufklärung (BZgA)
           * Telefonseelsorge Düsseldorf
           * Kliniken Essen Mitte
-          * Gute Hand
           * Arbeiter Samariter Bund Essen
-          * Caritasverband für die Stadt Recklinghausen, e.V.
+          * Stadt Münster,  Jugendamt
+          * Stadt Essen, Jugendamt und Gesundheitsamt
