--- a/styles/components/contact/index.styl
+++ b/styles/components/contact/index.styl
@@ -95,6 +95,14 @@
     font-size 2rem
     transform translateY(-50%)
 
+
+
+.contact .map-link
+  cursor pointer
+  &:before
+    @extend .ion-ios-pin-outline:before
+
+
 +up-to(bp-small)
   .address
     h3
