--- a/templates/cross_link_teaser.pug
+++ b/templates/cross_link_teaser.pug
@@ -17,4 +17,4 @@ mixin teaser-list(teasers)
         when 'single'
           +teaser(teaser, 'Einzelpersonen', SINGLES_HOST)
         when 'corporations'
-          +teaser(teaser, 'Fachkräfte', '#')
+          +teaser(teaser, 'Fachkräfte', ORGANISATION_HOST)
