--- a/styles/helper/layout-helper.styl
+++ b/styles/helper/layout-helper.styl
@@ -35,6 +35,7 @@ container()
     max-width 1280px
 
   +from(bp-large)
-    margin-bottom 9rem
+    margin-bottom 3rem
     width 90%
     max-width 1280px
+    padding 1.5rem
