--- a/templates/base_layout.pug
+++ b/templates/base_layout.pug
@@ -135,3 +135,16 @@ html(lang="de")
         $('.scroll-menu').css('opacity', Math.min(1, 1 - position));
 
       });
+
+      $('.map-link').on('click', function(e) {
+        e.preventDefault();
+
+        if ((navigator.platform.indexOf("iPhone") != -1)
+          || (navigator.platform.indexOf("iPod") != -1)
+          || (navigator.platform.indexOf("iPad") != -1)
+          || (navigator.platform.indexOf("MacIntel") != -1)) {
+         window.open("maps://maps.google.com/maps?daddr=Planckstra%C3%9Fe+115,+45147+Essen&amp;ll=");
+       } else {
+         window.open("http://maps.google.com/maps?daddr=Planckstra%C3%9Fe+115,+45147+Essen&amp;ll=");
+       }
+      });
