--- a/templates/couples_layout.pug
+++ b/templates/couples_layout.pug
@@ -4,9 +4,11 @@ block image-teaser
   picture
     <!--[if IE 9]><video style="display: none;"><![endif]-->
     source(srcset=ASSET_HOST + "/images/couples-bg-1380.png" media="(min-width: 1200px)")
-    source(srcset=ASSET_HOST + "/images/couples-bg-1024.png" media="(min-width: 640px)")
+    source(srcset=ASSET_HOST + "/images/couples-bg-640.png" media="(max-width: 640px)")
     <!--[if IE 9]></video><![endif]-->
-    img(src=ASSET_HOST + "/images/couples-bg-640.png" alt="")
+    img(src=ASSET_HOST + "/images/couples-bg-1024.png" alt="")
 
 block central-teaser
-  h1 Paartherapie
+  .central-teaser
+    h1 Paartherapie
+    p.sub-title Systemisch integrative Praxis für <span class="together">Paar- und Familientherapie</span>, <span class="together">Coaching und psychologische Beratung</span>, <span class="together">Sexualberatung und Sexualpädagogik</span>
