--- a/templates/landing_page_layout.pug
+++ b/templates/landing_page_layout.pug
@@ -7,10 +7,10 @@ block body
     picture
       | <!--[if IE 9]><video style="display: none;"><![endif]-->
       source(srcset=ASSET_HOST + "/images/landing-page-bg-1380.png" media="(min-width: 1200px)")
-      source(srcset=ASSET_HOST + "/images/landing-page-bg-1024.png" media="(min-width: 640px)")
+      source(srcset=ASSET_HOST + "/images/landing-page-bg-640.png" media="(max-width: 640px)")
       | <!--[if IE 9]></video><![endif]-->
 
-      img( src=ASSET_HOST + "/images/landing-page-bg-640.png" alt="")
+      img( src=ASSET_HOST + "/images/landing-page-bg-1024.png" alt="")
 
     .central-teaser
       h1 Andreas Niehues
