--- a/templates/organisation_layout.pug
+++ b/templates/organisation_layout.pug
@@ -3,13 +3,12 @@ extends /sub_layout
 block image-teaser
   picture
     <!--[if IE 9]><video style="display: none;"><![endif]-->
-    source(srcset=ASSET_HOST + "/images/singles-bg-1380.png" media="(min-width: 1200px)")
-    source(srcset=ASSET_HOST + "/images/singles-bg-640.png" media="(max-width: 640px)")
+    source(srcset=ASSET_HOST + "/images/org-bg-1380.png" media="(min-width: 1200px)")
+    source(srcset=ASSET_HOST + "/images/org-bg-640.png" media="(max-width: 640px)")
     <!--[if IE 9]></video><![endif]-->
-
-    img(src=ASSET_HOST + "/images/singles-bg-1024.png" alt="")
+    img(src=ASSET_HOST + "/images/org-bg-1024.png" alt="")
 
 block central-teaser
-  .central-teaser
-    h1 Coaching &amp; psychologische Beratung
+  .central-teaser.centralized
+    h1 Fachkräfte
     p.sub-title Systemisch integrative Praxis für <span class="together">Paar- und Familientherapie</span>, <span class="together">Coaching und psychologische Beratung</span>, <span class="together">Sexualberatung und Sexualpädagogik</span>
