--- a/templates/base_layout.pug
+++ b/templates/base_layout.pug
@@ -148,3 +148,5 @@ html(lang="de")
          window.open("http://maps.google.com/maps?daddr=Planckstra%C3%9Fe+115,+45147+Essen&amp;ll=");
        }
       });
+
+    block scripts
