--- a/templates/base_layout.pug
+++ b/templates/base_layout.pug
@@ -7,7 +7,7 @@ html(lang="de")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     meta(name="author" content="Andreas Niehues")
 
-    block keywords
+    block seo
     block title
       title Andreas Niehues - Systemisch integrative Praxis für Paar- und Familientherapie, Coaching und psychologische Beratung, Sexualberatung und Sexualpädagogik
 
