--- a/templates/contact.pug
+++ b/templates/contact.pug
@@ -24,7 +24,7 @@
     p.city 45147 Essen-Holsterhausen
 
     h3 Telefon
-    a.tellink(href="tel:020112345567889") 0201-12345567889
+    a.tellink(href="tel:+4920117541275") 0201 175 412 75
     br
     br
     a.map-link Anfahrt
