--- a/templates/meta_nav.pug
+++ b/templates/meta_nav.pug
@@ -1,10 +1,10 @@
 nav.meta
   ul
     li.meta-about-me
-      a(href="#about-me") über mich
+      a(href=HOME_HOST+"/#about-me") über mich
     li.meta-practice
-      a(href="#practice") praxis
+      a(href=HOME_HOST+"/#practice") praxis
     li
-      a(href="#contact") kontakt
+      a(href=HOME_HOST+"/#contact") kontakt
     li
       a(href=HOME_HOST+"/impressum.html") impressum
