--- a/templates/organisation_layout.pug
+++ b/templates/organisation_layout.pug
@@ -10,5 +10,5 @@ block image-teaser
 
 block central-teaser
   .central-teaser.centralized
-    h1 Fachkräfte
+    h1 Fortbildung und Fachberatung
     p.sub-title Systemisch integrative Praxis für <span class="together">Paar- und Familientherapie</span>, <span class="together">Coaching und psychologische Beratung</span>, <span class="together">Sexualberatung und Sexualpädagogik</span>
