--- a/styles/components/about-me/index.styl
+++ b/styles/components/about-me/index.styl
@@ -24,6 +24,15 @@ card-border-color = rgb(238, 238, 238)
     h2
       margin-bottom 2rem
 
+.background
+  padding 0
+
+  .background-content
+    padding 1.5rem
+
+  picture, img
+    width 100%
+    max-width 100%
 
 .background, .reference-list
   @extend .card
