remove content for canonical footers

--- a/templates/shared_info.pug
+++ b/templates/shared_info.pug
@@ -1,4 +1,7 @@
-include about_me
-block after_shared_content
-include practice
-include contact
+unless config.get('canonical')
+  include about_me
+  block after_shared_content
+  include practice
+  include contact
+else
+  block after_shared_content
