move vendor files

--- a/templates/base_layout.pug
+++ b/templates/base_layout.pug
@@ -13,7 +13,7 @@ html(lang="de")
 
     link(rel='stylesheet' href=ASSET_HOST + "/css/main.css")
 
-    script(src=ASSET_HOST + "/vendor/picturefill.min.js" async)
+    script(src=ASSET_HOST + "/foreign/picturefill.min.js" async)
     - bodyClasses = []
     - bodyClasses.push(ENV+"-environment")
     - if (DEBUG) { bodyClasses.push("debug") }
