--- a/styles/components/contact/index.styl
+++ b/styles/components/contact/index.styl
@@ -1,6 +1,10 @@
 .contact
   container()
   overflow hidden
+
+.form-wrapper
+  overflow hidden
+
 .address
   font-style normal
   font-size 1.5rem
