--- a/templates/about_me.pug
+++ b/templates/about_me.pug
@@ -9,7 +9,7 @@
       picture
         //- source(srcset=ASSET_HOST + "/images/landing-page-half-bg-1380.png" media="(min-width: 1200px)")
         //- source(srcset=ASSET_HOST + "/images/landing-page-half-bg-1024.png" media="(min-width: 640px)")
-        img(src=ASSET_HOST + "/images/profile.png" alt="")
+        img(src=ASSET_HOST + "/images/profile.png" alt="Andreas Niehues")
       .background-content
         :markdown-it
           ### Mein Hintergrund
