--- a/templates/landing_page_layout.pug
+++ b/templates/landing_page_layout.pug
@@ -10,7 +10,7 @@ block body
       source(srcset=ASSET_HOST + "/images/landing-page-bg-640.png" media="(max-width: 640px)")
       | <!--[if IE 9]></video><![endif]-->
 
-      img( src=ASSET_HOST + "/images/landing-page-bg-1024.png" alt="")
+      img( src=ASSET_HOST + "/images/landing-page-bg-1024.png" alt="Systemisch integrative Beratung für Familien, Paare und Alleinstehende")
 
     .central-teaser
       h1 Andreas Niehues
