--- a/templates/shared_info.pug
+++ b/templates/shared_info.pug
@@ -1,4 +1,4 @@
-if config.get('canonical')
+if config.get('canonical') || config.get('standAlonePage')
   include about_me
   block after_shared_content
   include practice
